<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"

    android:id="@+id/context_viewplan"

    tools:context=".PlanActivity">
    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/name_here"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/tvSubtitle3"
        android:layout_width="413dp"
        android:layout_height="38dp"
        android:text="@string/sign_up_subtitle3"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="166dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/design_default_color_error"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />





    <TextView
        android:id="@+id/txttext"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tes"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />


    <ImageButton
        android:id="@+id/btnReturplan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/btn_return"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"

        app:tint="@android:color/black" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="117dp"
        android:layout_height="90dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="1166dp"
        android:layout_height="405dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:listitem="@layout/item_pack" />
</androidx.constraintlayout.widget.ConstraintLayout>
