<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/context_viewsignin"
    android:background="#FEFEFE"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/txtphonenumber"
        android:layout_width="381dp"
        android:layout_height="44dp"
        android:layout_margin="20dp"
        android:gravity="start|center"
        android:text="@string/phone_number2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />


    <TextView
        android:id="@+id/tvSubtitle2"
        android:layout_width="413dp"
        android:layout_height="38dp"
        android:text="@string/sign_up_subtitle2"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPhoneNumberLayout2"
        android:layout_width="534dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="NotSibling,UnknownId">

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="117dp"
        android:layout_height="90dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <ImageButton
        android:id="@+id/btn_playsignin"
        android:layout_width="76dp"
        android:layout_height="68dp"
        android:src="@drawable/rouge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />


    <!-- Phone Number -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="494dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:text="@string/sign_up"
        android:textColor="#D30A0A"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="1032dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@drawable/phonenumber"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btnReturnsignup"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/btn_return"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:tint="@android:color/black" />

    <EditText
        android:id="@+id/etPhoneNumber2"
        android:layout_width="495dp"
        android:layout_height="58dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>



